--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
         body, html {
             height: 100%;
             margin: 0;
-            display: flex;
+<!--            display: flex;-->
             justify-content: center;
             align-items: center;
             background-color: #f0f0f0;
@@ -20,16 +20,18 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 90%; /* Increased to 90% of the screen width for a larger view */
-            max-width: 1200px; /* Increased maximum width for larger screens */
+            width: 100%;
+            height: 100vh; /* Height set to 100% of the viewport */
+            max-width: 100%;
+            box-sizing: border-box; /* Include padding in width/height */
         }
 
         video, canvas {
-            width: 100%; /* Set the video to take the full width of the container */
-            height: auto; /* Keep the aspect ratio */
+            width: 100%; /* Full width of the container */
+            height: 90vh ; /* Maintain aspect ratio */
             border-radius: 8px;
             margin-bottom: 10px;
-            transform: scaleX(-1); /* Flip the video horizontally to correct the mirror effect */
+            transform: scaleX(-1); /* Mirror the video */
         }
 
         button {
